# microbial-data-standard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zensical.toml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lefthook.yml  main.py  package.env  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: dev.docker-compose.yml  devcontainer.json
.github/workflows/: docs.yml  main.yml  mkdocs.yml  new_tag.yml
LICENSES/: MIT.txt
configs/: REUSE.toml
configs/dev/: mkdocs.yml  requirements.dev.txt  requirements.docs.txt  requirements.test.txt
configs/docker/: dev.Dockerfile
configs/lint/: whitelist.py
configs/requirements/dev/: requirements.txt
configs/requirements/docs/: requirements.txt
configs/requirements/test/: requirements.txt
docs/: background.md  call.md  graph.md  index.md  license.md  technical.md
docs/css/: extra.css
docs/examples/: bacteria.md  data_1.md  data_2.md  fungi.md
docs/images/: transparent_white_thick.png.license
docs/python/: microbe.md  sub_classes.md
docs/schema/: 01. bioSafety.md  01. creation_date.md  01. id.md  01. organismType.md  01. primaryId.md  01. version.md  02. collections.md  02. creation_date.md  02. lastUpdate.md  02. morphType.md  02. organismType.md  02. primaryId.md  03. cultivationMedia.md  03. morphType.md  03. organismType.md  03. typeStrain.md  03. unifiedTypeStrain.md  04. enzymes.md  04. morphType.md  04. taxon.md  04. typeStrain.md  04. unifiedTaxon.md  05. fattyAcidProfiles.md  05. identifier.md  05. taxon.md  05. typeStrain.md  05. unifiedTaxon.md  05. unifiedTypeStrain.md  06. gcContent.md  06. identifier.md  06. origin.md  06. taxon.md  06. typeStrain.md  06. unifiedTaxon.md  07. growthConditions.md  07. identifier.md  07. legal.md  07. origin.md  07. sample.md  07. typeStrain.md  (+253 more)
docs/stylesheets/: extra.css
schema/: microbe_schema.json
src/microbial_strain_data_model/: microbe.py  strain.py
src/microbial_strain_data_model/classes/: actors.py  address.py  application.py  biosafety.py  cellshape.py  chemicalsubstance.py  colony.py  country.py  cultivationmedia.py  enums.py  enzyme.py  fattyacidprofile.py  fungi.py  gccontent.py  growrange.py  growthcondition.py  growthrange.py  hemolysis.py  identifier.py  isolation.py  isolationtag.py  legal.py  links.py  literature.py  location.py  metabolitetest.py  morphology.py  motility.py  multicell.py  organization.py  origin.py  othermedia.py  oxygenrelation.py  pathogen.py  person.py  relateddata.py  sample.py  sequence.py  size.py  source.py  (+7 more)
src/microbial_strain_data_model/data/: isolation_sources_tree.py
src/microbial_strain_data_model/utils/: functions.py
tests/: test_check_example_data.py  test_isolation_source.py  test_microbe.py
tests/example_data/: bacteria.json  fungi.json
