[project]
name = "microbial_strain_data"
version = "0.11.0"
description = """This project defines a new microbial strain data standard for all data describing a microbial strain."""
readme = "README.md"
authors = [{ name = "Julius Witte" }]
license = "MIT"
requires-python = ">=3.13,<4"

[tool.uv]
exclude-newer = "3 days"
package = false
default-groups = ["mono"]

[tool.setuptools]
py-modules = []

[tool.uv.sources]
microbial_strain_data_model = { workspace = true }
microbial_strain_data_utils = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/microbial_strain_data_schema"]


[dependency-groups]
mono = [
  # local
  "microbial_strain_data_model",
  "microbial_strain_data_utils",
]
dev = [
  "commitizen ==4.16.2",
  "pyrefly ==1.0.0",
  "ruff ==0.15.14",
  "codespell ==2.4.2",
  "shellcheck-py ==0.11.0.1",
  "pre-commit-hooks ==6.0.0",
  "vulture ==2.16",
  # license
  "reuse ==6.2.0",
  # commit hooks
  "lefthook ==2.1.8",
  # types
]
test = ["coverage ==7.14.0", "pytest ==9.0.3", "tox ==4.54.0"]
docs = [
  "zensical ==0.0.44",
  "mkdocstrings-python ==2.0.4",
  "griffe-pydantic ==1.3.1",
  "griffe ==2.0.2"
]

[tool.codespell]
count = ''
ignore-words = "configs/lint/ignore.txt"
quiet-level = 3
skip = '.vscore,.tox,*~,*.cache,*.lock,venv,*ignore.txt'

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "README.md:^\\[!\\[release:",
  "packages/microbial_strain_data_model/pyproject.toml",
  "packages/microbial_strain_data_utils/pyproject.toml",
]
version_provider = "uv"
version_type = "semver"

[tool.pyrefly]
preset = "strict"
project-includes = [
  "packages/**/*.py",
]

project-excludes = [
  "**/__pycache__/**",
  "**/.tox/**",
  "**/.venv/**",
  "**/build/**",
  "**/dist/**",
  "configs/**",
]
search-path = [
  "packages/microbial_strain_data_utils/src",
  "packages/microbial_strain_data_model/src",
]
python-version = "3.13"
python-platform = "linux"
skip-interpreter-query = false
check-unannotated-defs = true
infer-return-types = "checked"

[tool.pyrefly.errors]
bad-return = true
bad-assignment = true
implicit-any = true
unsupported-operation = true
unused-ignore = true

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = [
  ".git",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pypackages__",
  "__pycache__",
  "build",
  "dist",
  "venv"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
ignore = [
  "TRY003",
  "N818",
  "N815",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
]
select = ["E", "F", "B", "C90", "S", "PT", "ARG", "PTH", "TRY", "RUF", "N", "D"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]
"configs/lint/whitelist.py" = ["F821","B018","E501"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.23"]

[tool.tox.env_run_base]
allowlist_externals = ["coverage"]
set_env = { PYTHONPATH = "packages/microbial_strain_data_model/src:packages/microbial_strain_data_utils/src" }
commands = [
  [
    "coverage",
    "erase",
  ],
  [
    "coverage",
    "run",
    "--parallel-mode",
    "-m",
    "pytest",
    "{posargs}",
  ],
  [
    "coverage",
    "combine",
  ],
  [
    "coverage",
    "report",
  ],
]

[tool.coverage.run]
source = [
  "packages/microbial_strain_data_model/src/microbial_strain_data_model",
  "packages/microbial_strain_data_utils/src/microbial_strain_data_utils"
]
parallel = true

[tool.coverage.report]
show_missing = false
fail_under = 30

[tool.vulture]
paths = [
  "configs/lint/whitelist.py",
   "packages/microbial_strain_data_utils/src",
   "packages/microbial_strain_data_model/src"
]
ignore_decorators = ["@*"]
ignore_names = ["model_config", "formatwarning"]
make_whitelist = true
min_confidence = 60
sort_by_size = true
verbose = false
